Prevent navbar from covering content

--- a/static/resources/math3d_app.css
+++ b/static/resources/math3d_app.css
@@ -179,6 +179,11 @@ input {
   color: #bfbfbf;
 }
 
+/*Prevent fixed navbar from covering content*/
+body {
+    padding-top: 40px;
+}
+
 /**************************************************/
 /* Main */
 /**************************************************/
